# simplicio-local-any-llm-16gb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DOD.md  GOAL_RESULT.md  PROGRESS.md  README.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json
engine/: README.md
runtime/: CMakeLists.txt  README.md
runtime/adapters/: adapter_registry.cpp  adapter_registry.h  dense_adapter_base.cpp  dense_adapter_base.h
runtime/adapters/bitnet/: bitnet_adapter.cpp  bitnet_adapter.h
runtime/adapters/deepseek/: deepseek_moe_adapter.cpp  deepseek_moe_adapter.h
runtime/adapters/gemma/: gemma_adapter.cpp  gemma_adapter.h
runtime/adapters/glm/: glm_moe_adapter.cpp  glm_moe_adapter.h
runtime/adapters/kimi/: kimi_moe_adapter.cpp  kimi_moe_adapter.h
runtime/adapters/llama/: llama_adapter.cpp  llama_adapter.h  llama_config.cpp  llama_config.h
runtime/adapters/minimax/: minimax_moe_adapter.cpp  minimax_moe_adapter.h
runtime/adapters/qwen/: qwen_adapter.cpp  qwen_adapter.h
runtime/adapters/ternary/: ternary_adapter.cpp  ternary_adapter.h
runtime/ane/: README.md  ane_backend.cpp  ane_backend.h  mixed_dispatch.cpp  mixed_dispatch.h
runtime/benchmarks/: CMakeLists.txt  README.md  dense_baseline.cpp  kernel_benchmark_observability.h  kernel_cpu_benchmarks.cpp  matrix_runner.cpp  neon_lowbit_observability.h  real_forward_throughput.cpp  repro_harness.py  test_repro_harness.py
runtime/cache/: README.md  sparsity_aware_cache.cpp  sparsity_aware_cache.h
runtime/core/: backend_selector.cpp  backend_selector.h  bpe_tokenizer.cpp  bpe_tokenizer.h  gqa_attention.cpp  gqa_attention.h  hardware_probe.cpp  hardware_probe.h  ius4v6_adapter.h  json_value.cpp  json_value.h  model_asset.cpp  model_asset.h  rope.cpp  rope.h  runtime_context.cpp  runtime_context.h  runtime_mode.cpp  runtime_mode.h  safetensors_reader.cpp  tensor.cpp  tensor.h
runtime/cpu/: README.md  quantize_projection.cpp  quantize_projection.h  scalar_attention.cpp  scalar_attention.h  scalar_matmul.cpp  scalar_matmul.h  ternary_lut.cpp  ternary_lut.h
runtime/fuzz/: afl_driver.cpp  fuzz_dequant_int4.cpp
runtime/kv/: README.md  eviction_policy.cpp  eviction_policy.h  kv_pager.cpp  kv_pager.h  prefix_cache.cpp  prefix_cache.h  ssd_cold_store.cpp  ssd_cold_store.h  summarizer.cpp  summarizer.h
runtime/memory/: unified_allocator.cpp  unified_allocator.h
runtime/metal/: README.md  autorelease_scope.cpp  autorelease_scope.h  command_queue.cpp  command_queue.h
runtime/metal/kernels/: bitnet_matmul.metal
runtime/moe/: README.md  expert_ffn.cpp  expert_ffn.h  expert_pager.cpp  expert_pager.h  moe_telemetry.cpp  moe_telemetry.h  router.cpp  router.h  router_metrics.cpp  router_metrics.h  shard_loader.cpp  shard_loader.h
runtime/neon/: README.md  bitnet_matmul.cpp  bitnet_matmul.h  block_gemm.cpp  block_gemm.h  neon_attention.cpp  neon_attention.h  neon_matmul.cpp  neon_matmul.h
runtime/net/: native_http_server.cpp  native_http_server.h  openai_chat_handler.cpp  openai_chat_handler.h  static_asset.cpp  static_asset.h
runtime/scheduler/: README.md  continuous_batcher.cpp  continuous_batcher.h
runtime/speculative/: README.md  draft_model_loader.cpp  draft_model_loader.h  eagle3_decoder.cpp  eagle3_decoder.h  lossless_speculative_session.cpp  lossless_speculative_session.h  peagle_decoder.cpp  peagle_decoder.h  speculative_telemetry.cpp  speculative_telemetry.h
runtime/telemetry/: telemetry_types.cpp
runtime/tuning/: README.md  auto_tuner.cpp  auto_tuner.h  profile_cache.cpp  profile_cache.h  thermal_monitor.cpp  thermal_monitor.h
tests/: CMakeLists.txt
tests/e2e/: README.md  us4-cli-serve.spec.ts  us4-cli.spec.ts
tests/fixtures/engine/: README.md  run_engine_forward_oracles.py  run_engine_tokenizer_contract.py  test_runner_skip_contract.py
tests/fixtures/engine/colibri/: ref_glm.json
tests/fixtures/engine/tokenizer/: minimal_cases.tsv  minimal_tokenizer.json
tests/fixtures/models/bitnet-b1.58-2b/: model.us4manifest
tests/fixtures/models/deepseek-v2-lite/: model.us4manifest  tokenizer.json
tests/fixtures/models/gemma-2b-it/: model.us4manifest  toy-gemma.safetensors
tests/fixtures/models/glm-5.1/: experts-00.safetensors  experts-01.safetensors  model.us4manifest  tokenizer.json  toy-glm.safetensors
tests/fixtures/models/kimi-k2-instruct/: model.us4manifest  tokenizer.json
tests/fixtures/models/llama-3.1-8b/: model.us4manifest
tests/fixtures/real_checkpoint/: README.md  generate_reference_from_real_checkpoint.py
tests/fixtures/safetensors/: generate_oracle_reference.py  generate_toy_bf16_safetensors.py  oracle_reference_logits.json  toy_bf16.safetensors
tests/fixtures/tokenizer/: generate_toy_bpe.py  reference_output.json  toy_bpe_tokenizer.json
tests/tiny/: adaptive_cache_speculation_tiny.cpp  run_adaptive_cache_speculation_tiny.sh
tests/unit/: CMakeLists.txt  adapter_generation_contract_test.cpp  adaptive_cache_speculation_contract_test.cpp  ane_contract_test.cpp  backend_selector_contract_test.cpp  benchmark_observability_contract_test.cpp  block_gemm_contract_test.cpp  bpe_tokenizer_contract_test.cpp  eagle3_contract_test.cpp  eviction_policy_contract_test.cpp  expert_ffn_contract_test.cpp  gqa_attention_contract_test.cpp  json_value_contract_test.cpp  kernel_benchmark_observability_contract_test.cpp  kv_contract_test.cpp  lowbit_contract_test.cpp  model_asset_contract_test.cpp  moe_advanced_contract_test.cpp  moe_contract_test.cpp  moe_extended_contract_test.cpp  moe_real_expert_weights_contract_test.cpp  neon_contract_test.cpp  openai_chat_handler_contract_test.cpp  oracle_correctness_contract_test.cpp  quantization_real_weights_contract_test.cpp  rope_contract_test.cpp  runtime_acceleration_contract_test.cpp  runtime_contract_runner.cpp  runtime_smoke_test.cpp  safetensors_reader_contract_test.cpp  scalar_kernels_contract_test.cpp  scheduler_contract_test.cpp  speculative_contract_test.cpp  speculative_loader_contract_test.cpp  speculative_real_draft_contract_test.cpp  static_asset_contract_test.cpp  tensor_contract_test.cpp  tuning_contract_test.cpp
(+193 files in other folders)
